
  * lib:
    - hashsums:
      - 'getStringHash': speed-up.
      - 'getStringHash': renamed to 'getHashOfString'.
      - 'getHashOfString': fixed crash on non-ASCII strings.
    - cache:
      - Pre-parsing index files: really discard packages with broken package
        names.
      - 'operator=': forbidden now.
    - file:
      - 'getBlock': renamed to 'getRecord'.
    - common:
      - 'exception': renamed to 'Exception'.
    - system/resolvers/native:
      - Don't add new reason to an action which received unsatisfied soft
        dependency penalty.
    - config:
      - 'getNumber': renamed to 'getInteger'.
    - cache/version:
      - 'AvailableAsEntry': renamed to 'Source'.
      - 'availableAs': renamed to 'sources'.
    - download/progress:
      - 'progress': fixed nasty bug with wrong computing total download
        size when at least one download has an unknown size.
    - Link with 'rt'.
    - cache/relation:
      - 'unarchitectureRelationLine': moved to ArchitecturedRelationLine class
        and renamed to 'toRelationLine'.
      - 'ArchitecturedRelationExpression::getHashString': doesn't exist,
        removed its declaration.
    - cache/package:
      - 'operator=': forbidden now.
      - copy constructor: forbidden now.
    - system/worker:
      - Fixed typo which resulted in some action dependencies being lost while
        merging remove and unpack actions.
      - Fixed typos which resuled in many false positives when checking for
        temporary broken pre-depends.
  * doc:
    - examples:
      - Added 'show-upgradeable' example.
    - reference:
      - Documented static part of the library.
      - Added a build infrastructure.
  * debian:
    - rules:
      - Moved starting buildpoint to top directory (from 'cpp').
    - control:
      - Added build-dependency on doxygen.
      - Added new binary package 'libcupt2-doc-experimental'.
      - The package libcupt2-dev-experimental now suggests
        libcupt2-doc-experimental.
